<resources>
    <string name="app_name">Commands</string>
    <string name="app_version">Version 1.0.1</string>
    <string name="home_home">Home</string>
    <string name="home_find">Find</string>
    <string name="home_bookmark">Bookmark</string>
    <string name="draw_github">GitHub</string>
    <string name="draw_collect">Collect</string>
    <string name="draw_details">Details</string>
    <string name="logout">Logout</string>
    <string name="draw_header_details">Your most loyal partners!</string>
    <string name="more_1">给我评分</string>
    <string name="more_2">功能介绍</string>
    <string name="more_3">用户反馈</string>
    <string name="more_4">版本更新</string>
    <string name="details_1">《软件许可及服务协议》</string>
    <string name="details_2">《隐私保护指引摘要》|《隐私保护指引》</string>
    <string name="details_3">客服QQ:2506573157</string>
    <string name="details_4">403的狗 版权所有</string>
    <string name="details_5">创作不易 禁止搬运 支持原创</string>
</resources>